8339339: [lw5] javac should issue an error if a null-restricted field is left uninitialized, fix override related warnings